UI fix: header alignment on mobile

--- a/src/components/primary-widgets/resume/ResumeDetails.less
+++ b/src/components/primary-widgets/resume/ResumeDetails.less
@@ -17,6 +17,12 @@
         .highlight {
             color: greenyellow;
         }
+
+        .header-intro {
+            @media only screen and (max-width: 700px) {
+                width: 90%;
+            }
+        }
     }
 
     .logo {
